0.0.8/_sources/generated/spdl.io.utils.rst.txt
..
   Custom template for our custom_autosummary.
   The purpose of using custom_autosummary is list the entries on
   the right side bar instead of the left side bar.
   This is achieved with the combination of custom directive, template and CSS.

   The `custom_autosummary` directive functions mostly like `autosummary`. We
   pass `:toctree:` option to generate a doc page for each entry, but we use
   our custom `:hide_from_toctree:` option so as not to attach them in ToC tree.

   This template inserts a section header for each entry, so that they show up
   in the right-side bar. The headers are hidden by CSS.

   Because each entry will have its own table and their borders no longer match,
   table borders are hidden by CSS and instead we use horizontal line.

.. raw:: html

   <div class="custom_autosummary">

spdl.io.utils
=============

Overview
--------

.. automodule:: spdl.io.utils

API Reference
-------------

..
   ############################################################################
   Functions
   ############################################################################



.. rubric:: Functions


get\_ffmpeg\_filters
^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.get_ffmpeg_filters


get\_ffmpeg\_log\_level
^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.get_ffmpeg_log_level


is\_cuda\_available
^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.is_cuda_available


is\_nvcodec\_available
^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.is_nvcodec_available


set\_ffmpeg\_log\_level
^^^^^^^^^^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.set_ffmpeg_log_level


trace\_counter
^^^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.trace_counter


trace\_event
^^^^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.trace_event


trace\_gc
^^^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.trace_gc


tracing
^^^^^^^
.. autosummary::
   :toctree:
   :nosignatures:
   :hide_from_toctree:

   ~spdl.io.utils.tracing





..
   ############################################################################
   Attributes
   ############################################################################





..
   ############################################################################
   Classes
   ############################################################################





..
   ############################################################################
   Exceptions
   ############################################################################





..
   ############################################################################
   Sub modules
   ############################################################################





..
   ############################################################################
   Others
   ############################################################################












.. raw:: html

   </div>